# nexus-task-tracker

./: .gitignore  .mcp.json  .nexus-ledger.json  AGENTS.md  CLAUDE.md  README.md
nexus-broker/: pyproject.toml
nexus-broker/launchd/: backup.plist.template  daemon.plist.template  eval.plist.template  http.plist.template  pii-scan.plist.template  restore-test.plist.template  writer.plist.template
nexus-broker/src/broker/: capability_token.py  db.py  discovery.py  node_contract.py  registry.py  server.py  state.py  worktree_registry.py
nexus-broker/src/broker/adapters/: __init__.py  base.py  lsp_py.py  socraticode.py  vault.py
nexus-broker/src/broker/conductor/: __init__.py  __main__.py  checkpoint.py  dag.py  entry.py  governance.py  pool.py  ramp.py  ready_set_client.py  verify_matrix.py
nexus-broker/src/broker/daemon/: __init__.py  (+27 more)
nexus-broker/tests/: README.md  _beartype_activation.py  _prop_event_strategies.py  conftest.py  test_advisory_handlers.py  test_alembic_batch_poc.py  test_base_name_retirement.py  test_beartype_contracts.py  test_broker_adapters.py  test_capability_index.py  test_capability_token.py  test_collection_nonempty_gate.py  test_concurrent_write_wal.py  test_conductor_dag.py  test_conductor_entry.py  test_conductor_governance.py  test_conductor_pool.py  test_daemon_drift_watch.py  test_daemon_ensure.py  test_daemon_event_bus.py  test_daemon_fleet_aggregation.py  test_daemon_ownership.py  test_daemon_packet_store.py  test_daemon_pidfile.py  test_daemon_pilot.py  test_daemon_ready_set.py  test_daemon_registry_query.py  test_daemon_session_digest.py  test_daemon_skill_load_recorder.py  test_daemon_tracing.py  test_decomp_nudge.py  test_deliverables_persona_drift.py  test_deny_handlers.py  test_discovery_tools.py  test_dispatch_capture.py  test_dispatch_dualwrite.py  test_dispatch_shape_guard.py  test_dispatch_telemetry.py  test_docs_watcher.py  test_event_bus.py  (+42 more)
nexus-broker/tests/__snapshots__/: test_advisory_handlers.ambr  test_capability_index.ambr  test_conductor_dag.ambr  test_conductor_pool.ambr  test_daemon_ownership.ambr  test_daemon_pilot.ambr  test_daemon_ready_set.ambr  test_daemon_session_digest.ambr  test_docs_watcher.ambr  test_event_bus.ambr
nexus-broker/tests/contracts/: schemas.py  test_hook_envelope_contracts.py  test_mcp_tool_contracts.py
nexus-broker/tests/router_train/: conftest.py  test_aggregate.py  test_check.py  test_completion_event_pairs.py  test_contrastive.py  test_corpus_hygiene.py  test_export.py  test_export_finetune.py  test_export_v3.py  test_label.py  test_label_status.py  test_multisource_union.py  test_no_dispatch_mining.py  test_relabel.py  test_synthetic.py  test_transcript.py  test_v3_corpus.py
nexus-broker/tests/seams/: test_seam_broker_gate.py  test_seam_daemon_lifecycle.py  test_seam_render_install.py  test_seam_safe_update.py
nexus-broker/tests/vault/: conftest.py  test_graph_and_health.py  test_http_daemon.py  test_privacy_fence.py  test_read_tools.py  test_reader_read_only.py  test_vault_security.py  test_write_tools_enqueue.py  test_writer_serial_drain.py  test_writer_single_instance.py
prism/: .env.example  .gitignore  CHANGELOG.md  pyproject.toml
prism/prism/: cli.py  config.py  genome.py
prism/prism/sensor/: pipeline.py
prism/prism/synthesis/: mcp_server.py
prism/tests/: conftest.py  test_claude_cli.py  test_cli.py  test_genome.py  test_mcp_server.py  test_pipeline.py
(+1195 files in other folders)
