[project]
name = "prism"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.103.0",
  "httpx>=0.27",
  "mcp>=1.27.1",
  "python-dotenv>=1.0",
  "qdrant-client>=1.9",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.15.13",
]

[tool.hatch.build.targets.wheel]
packages = ["prism"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
pythonpath = ["."]
asyncio_mode = "auto"
